make tests work on Java 9